<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/option_A"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:lines="3"
            android:text="@string/option_a"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_unselected" />

        <Button
            android:id="@+id/option_B"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:lines="3"
            android:text="@string/option_b"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_unselected" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/option_C"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:lines="3"
            android:text="@string/option_c"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_unselected" />

        <Button
            android:id="@+id/option_D"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:lines="3"
            android:text="@string/option_d"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_unselected" />

    </LinearLayout>

</LinearLayout>