<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <!-- Username Label -->
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittext"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:singleLine="true" />

        <!-- Password Label -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="login"
        android:text="@string/login" />

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textColor="@drawable/sign_up_selector"
        android:textSize="16sp" />
</LinearLayout>
