<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ranking_tab_background"
        android:orientation="horizontal">

        <TextView
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/rank"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/stroke_lr_background"
            android:padding="10dp"
            android:text="@string/user"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/score"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/users_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

</LinearLayout>
